# FinalProjectCST8219

./: CMakeLists.txt
CST8219FinalProject/: Animation.cpp  Animation.h  Animation3.cpp  AnimationManager.cpp  CMakeLists.txt  Frame.cpp  Frame.h  Frame3.cpp  animationManager.h  animationPart2.h  framePart2.h  part1.cpp  part2.cpp  part3.cpp
