# CMakeList.txt : CMake project for CST8219FinalProject, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CST8219FinalProject "part1.cpp"  "animationPart2.h" "framePart2.h" "part2.cpp" "Frame.h" "Animation.h" "animationManager.h" "animationPart3.h" "part3.cpp")

# TODO: Add tests and install targets if needed.
