# CMakeList.txt : CMake project for CST8219FinalProject, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CST8219FinalProject "part3.cpp" "Animation3.cpp" "Frame3.cpp" "AnimationManager.cpp")

# TODO: Add tests and install targets if needed.
